--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,4 +3,5 @@ files:
     ignore:
       - /**/extras
       - /**/navbar.md
+      - /**/assets/
     translation: /translations/%locale_with_underscore%/%original_path%/%original_file_name%
