--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,4 +4,5 @@ files:
       - /**/extras
       - /**/navbar.md
       - /**/assets/
+      - /**/files/
     translation: /translations/%locale_with_underscore%/%original_path%/%original_file_name%
