Format frontpage/top bar

--- a/.gitignore
+++ b/.gitignore
@@ -97,8 +97,9 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
-# vuepress build output
-.vuepress/dist
+# vitepress build output
+docs/.vitepress/dist
+docs/.vitepress/cache
 
 # vuepress v2.x temp and cache directory
 .temp
