--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
+  },
+  "dependencies": {
+    "medium-zoom": "^1.1.0",
+    "vitepress": "^1.0.0-rc.31",
+    "vue": "^3.3.11"
   }
 }
