Added LethalAnalytics API docs to the wiki! I also fixed the APIs overview page (some stars were missing).

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "medium-zoom": "^1.1.0",
-    "vitepress": "^1.0.0-rc.31",
+    "vitepress": "^1.2.3",
     "vue": "^3.3.11"
   }
 }
