--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@nolebase/vitepress-plugin-enhanced-readabilities": "^2.13.0",
+    "@nolebase/vitepress-plugin-highlight-targeted-heading": "^2.13.0",
     "medium-zoom": "^1.1.0",
-    "vitepress": "^1.0.0-rc.31",
-    "vue": "^3.3.11"
+    "vitepress": "^1.6.3"
   }
 }
